fix(ui): Properly handle page/history state in documentation iframe
- Refactored the iframe into a standalone component
- Changes in the documentation route to ensure page/history state of
  documentation is correct
- Adapted E2E tests to let mocked documentation use `tailwindcss` in order
  to mimic the style behavior of https://sphinxawesome.xyz/

--- a/tests/ui/resources/style.css
+++ b/tests/ui/resources/style.css
@@ -1,13 +1,17 @@
-.light {
+/**
+ * Stylesheet that mocks the behavior of https: //sphinxawesome.xyz/.
+ */
+
+body {
   background-color: rgb(227, 242, 253);
   color: black;
 }
 
-.light a {
+a {
   color: blue;
 }
 
-.dark {
+.dark body {
   background-color: rgb(18, 18, 18);
   color: white;
 }
